service-entry/sidecar-on-VM/curl-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-client
  labels:
    app: http-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-client
  template:
    metadata:
      labels:
        app: http-client
        version: v1
    spec:
      containers:
      - name: http-client
        image: nicolaka/netshoot
        command: ["bash"]
        args: ["/root/test/ping.sh"]
        volumeMounts:
        - name: test-script-vol
          mountPath: /root/test
      volumes:
      - name: test-script-vol
        configMap:
          name: test-script-configmap
