service-entry/sidecar-on-VM/service-entry-endpoints-local-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ext-apache
  namespace: default
  labels:
    app: apache
spec:
  ports:
  - port: 8080
    name: http
    protocol: TCP
  - port: 8443
    name: https
    protocol: TCP
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: ext-apache-service-entry
  namespace: default
  labels:
    app: apache
spec:
  hosts:
  - ext-apache.default.svc.cluster.local
  location: MESH_EXTERNAL
  ports:
  - number: 8080
    name: http
    protocol: HTTP
  - number: 8443
    name: https
    protocol: HTTPS
  resolution: STATIC
  endpoints:
  - address: 192.168.1.163
    ports:
      http: 8080
      https: 8443
