service-entry/sidecar-on-VM/service-entry-minimal.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ext-apache
  namespace: default
  labels:
    app: ext-apache
spec:
  ports:
  - port: 8080
    name: http
    protocol: TCP
  - port: 8443
    name: https
    protocol: TCP
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: ext-apache-service-entry
  namespace: default
  labels:
    app: ext-apache
spec:
  hosts:
  - ext-apache.defaul.svc.cluster.local
  location: MESH_INTERNAL
  ports:
  - number: 8080
    name: http
    protocol: HTTP
  - number: 8443
    name: https
    protocol: HTTPS
  resolution: STATIC
  workloadSelector:
    labels:
      app: ext-apache
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: mtls-for-ext-apache
  namespace: default
spec:
#  selector:
#    matchLabels:
#      app: ext-apache
  mtls:
    mode: STRICT
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: mtls-for-ext-apache
  namespace: default
spec:
  host: ext-apache.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
