service-entry/sidecar-on-VM/service-entry.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: http-svc
  namespace: default
spec:
  ports:
  - port: 80
    name: http
    protocol: TCP
  - port: 443
    name: https
    protocol: TCP
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: http-virtual-service
  namespace: default
spec:
  hosts:
  - http-svc.default.svc.cluster.local
  http:
  - route:
    - destination:
        host: ext-apache-servers
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: http-service-entry
  namespace: default
spec:
  hosts:
  - ext-apache-servers
  location: MESH_INTERNAL
  ports:
  - number: 80
    name: http
    protocol: HTTP
  - number: 443
    name: https
    protocol: HTTPS
  resolution: STATIC
  endpoints:
  - address: 192.168.1.163
    network: vm-network
    serviceAccount: vm-operator
    ports:
      http: 80
      https: 443
