service-entry/sidecar-on-VM/service-entry.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: tomcat-service-entry
spec:
  hosts:
  - tomcat.hung.org.hk
  location: MESH_INTERNAL
  ports:
  - number: 8080
    name: http
    protocol: HTTP
  resolution: NONE
  workloadSelector:
    labels:
      app: tomcat
